--- a/src/index.html
+++ b/src/index.html
@@ -11,31 +11,50 @@
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header class="header-holder">
-        <div class="header-logo">
-            <a href="#">
-                <img src="./images/logo.png" alt="Logo">
-            </a>
-        </div>
-        <button class="header-menu-toggle" onclick="onToggleMenuPressed()">
-            <i class="fa fa-align-justify fa-2x"></i>
-        </button>
-        <nav class="header-menu">
-            <ul>
-                <li><a href="#">Главная</a></li>
-                <li><a href="#">Новости</a></li>
-                <li><a href="#">Контакты</a></li>
-                <li><a href="#">Партнеры</a></li>
-                <li><a href="#">Сотрудничество</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="content">
+        <header class="header-holder">
+            <div class="header-logo">
+                <a href="#">
+                    <img src="./images/logo.png" alt="Logo">
+                </a>
+            </div>
+            <button class="header-menu-toggle">
+                <i class="fa fa-align-justify fa-2x"></i>
+            </button>
+            <nav class="header-menu">
+                <ul>
+                    <li><a href="#">Главная</a></li>
+                    <li><a href="#">Новости</a></li>
+                    <li><a href="#">Контакты</a></li>
+                    <li><a href="#">Партнеры</a></li>
+                    <li><a href="#">Сотрудничество</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <main>
-        <h1>Main</h1>
-    </main>
-    <footer>
-        <h2>footer</h2>
+        <main>
+            <h1>Main</h1>
+        </main>
+    </div>
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-left">
+                <a href="#"><img src="./images/logo-footer.png" alt="Logo footer"></a>
+                <span>More Than You Can See</span>
+            </div>
+            <div class="footer-right">
+                <p><a href="tel:+380969369756">+380969369756</a></p>
+                <p><a href="mailto:info@alva.com">info@alva.com</a></p>
+                <div class="footer-social">
+                    <div class="facebook">
+                        <a href="#"><span></span></a>
+                    </div>
+                    <div class="instagram">
+                        <a href="#"><span></span></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <!--custom js-->
