Created markup for Partners page.

--- a/src/index.html
+++ b/src/index.html
@@ -11,54 +11,91 @@
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <div class="content">
-        <header class="header-holder">
-            <div class="header-logo">
-                <a href="#">
-                    <img src="./images/logo.png" alt="Logo">
-                </a>
-            </div>
-            <button class="header-menu-toggle">
-                <i class="fa fa-align-justify fa-2x"></i>
-            </button>
-            <nav class="header-menu">
-                <ul>
-                    <li><a href="#">Главная</a></li>
-                    <li><a href="#">Новости</a></li>
-                    <li><a href="#">Контакты</a></li>
-                    <li><a href="#">Партнеры</a></li>
-                    <li><a href="#">Сотрудничество</a></li>
-                </ul>
-            </nav>
-        </header>
-
-        <main>
-            <h1>Main</h1>
-        </main>
+<div class="content">
+    <header class="header-holder">
+        <div class="header-logo">
+            <a href="#">
+                <img src="./images/logo.png" alt="Logo">
+            </a>
+        </div>
+        <button class="header-menu-toggle">
+            <i class="fa fa-align-justify fa-2x"></i>
+        </button>
+        <nav class="header-menu">
+            <ul>
+                <li><a href="#">Главная</a></li>
+                <li><a href="#">Новости</a></li>
+                <li><a href="#">Контакты</a></li>
+                <li><a href="#">Партнеры</a></li>
+                <li><a href="#">Сотрудничество</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="top-banner">
+        <h3>Мы расширяем границы того, что вас окружает</h3>
     </div>
-    <footer class="footer">
-        <div class="footer-container">
-            <div class="footer-left">
-                <a href="#"><img src="./images/logo-footer.png" alt="Logo footer"></a>
-                <span>More Than You Can See</span>
+
+    <main>
+        <!--PARTNERS START-->
+        <div class="main-title">
+            <span></span><h1>партнеры</h1>
+        </div>
+        <div class="container _vertical-padding">
+            <div class="partners-item">
+                <div class="partners-avatar"></div>
+                <div class="partners-info">
+                    <div class="partners-name"><h3><a href="#">название компании</a></h3></div>
+                    <div class="partners-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias cupiditate deserunt ducimus eligendi hic illo minima nihil sapiente temporibus velit?</div>
+                </div>
             </div>
-            <div class="footer-right">
-                <p><a href="tel:+380969369756">+380969369756</a></p>
-                <p><a href="mailto:info@alva.com">info@alva.com</a></p>
-                <div class="footer-social">
-                    <div class="facebook">
-                        <a href="#"><span></span></a>
-                    </div>
-                    <div class="instagram">
-                        <a href="#"><span></span></a>
-                    </div>
+            <div class="partners-item">
+                <div class="partners-avatar"></div>
+                <div class="partners-info">
+                    <div class="partners-name"><h3><a href="#">название компании</a></h3></div>
+                    <div class="partners-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias cupiditate deserunt ducimus eligendi hic illo minima nihil sapiente temporibus velit?</div>
+                </div>
+            </div>
+            <div class="partners-item">
+                <div class="partners-avatar"></div>
+                <div class="partners-info">
+                    <div class="partners-name"><h3><a href="#">название компании</a></h3></div>
+                    <div class="partners-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias cupiditate deserunt ducimus eligendi hic illo minima nihil sapiente temporibus velit?</div>
+                </div>
+            </div>
+            <div class="partners-item">
+                <div class="partners-avatar"></div>
+                <div class="partners-info">
+                    <div class="partners-name"><h3><a href="#">название компании</a></h3></div>
+                    <div class="partners-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias cupiditate deserunt ducimus eligendi hic illo minima nihil sapiente temporibus velit?</div>
                 </div>
             </div>
         </div>
-    </footer>
+        <!--PARTNERS END-->
+    </main>
+</div>
+<footer class="footer">
+    <div class="footer-container">
+        <div class="footer-left">
+            <a href="#"><img src="./images/logo-footer.png" alt="Logo footer"></a>
+            <span>More Than You Can See</span>
+        </div>
+        <div class="footer-right">
+            <p><a href="tel:+380969369756">+380969369756</a></p>
+            <p><a href="mailto:info@alva.com">info@alva.com</a></p>
+            <div class="footer-social">
+                <div class="facebook">
+                    <a href="#"><span></span></a>
+                </div>
+                <div class="instagram">
+                    <a href="#"><span></span></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
-    <!--custom js-->
-    <script src="./js/main.js"></script>
+<!--custom js-->
+<script src="./js/main.js"></script>
 
 </body>
 </html>
