Created markup for News page.

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
             <nav class="header-menu">
                 <ul onclick="onShowPagePressed(event)">
                     <li><a href="#">Главная</a></li>
-                    <li><a href="#" style="pointer-events: none;">Новости</a></li>
+                    <li><a href="#">Новости</a></li>
                     <li><a href="#" style="pointer-events: none;">Контакты</a></li>
                     <li><a href="#">Партнеры</a></li>
                     <li><a href="#" style="pointer-events: none;">Сотрудничество</a></li>
@@ -33,7 +33,7 @@
             </nav>
         </div>
         <div class="top-banner">
-            <h3>Мы расширяем границы того, что вас окружает</h3>
+            <h3>Мы расширяем границы того, что вас окружает!</h3>
         </div>
     </header>
 
@@ -57,23 +57,36 @@
             <hr>
             <div class="home-news-holder">
                 <div class="news-left-column">
+
+                    <!--NEWS ITEM START(1 image)-->
                     <div class="news-item">
                         <div class="news-image">
                             <img src="./images/default-news-1.png" alt="Our news">
                         </div>
                         <div class="news-description">
                             <p>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad aperiam aut commodi culpa cupiditate distinctio dolore dolores ducimus labore maxime natus non quam quasi, quidem sapiente similique tempore temporibus, totam voluptates! Cumque cupiditate excepturi, exercitationem impedit iste qui quos, repudiandae sapiente unde veniam, vero voluptatibus? Adipisci alias animi, at culpa enim eos eum inventore ipsa, libero maiores maxime minus nam natus nesciunt nisi obcaecati officiis quaerat quibusdam quis quo reiciendis tempora velit voluptatum. Consequuntur culpa debitis error odio perferendis ratione repellat repudiandae tenetur. Atque autem enim explicabo fugiat harum magnam maxime nisi nostrum quis suscipit totam, vel vero voluptatibus!                            </p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad aperiam aut commodi culpa
+                                cupiditate distinctio dolore dolores ducimus labore maxime natus non quam quasi, quidem
+                                sapiente similique tempore temporibus, totam voluptates! Cumque cupiditate excepturi,
+                                exercitationem impedit iste qui quos, repudiandae sapiente unde veniam, vero
+                                voluptatibus? Adipisci alias animi, at culpa enim eos eum inventore ipsa, libero maiores
+                                maxime minus nam natus nesciunt nisi obcaecati officiis quaerat quibusdam quis quo
+                                reiciendis tempora velit voluptatum. Consequuntur culpa debitis error odio perferendis
+                                ratione repellat repudiandae tenetur. Atque autem enim explicabo fugiat harum magnam
+                                maxime nisi nostrum quis suscipit totam, vel vero voluptatibus! </p>
                             <a href="#">Читать далее...</a>
                         </div>
                     </div>
+                    <!--NEWS ITEM END-->
+
                     <div class="news-item">
                         <div class="news-image">
                             <img src="./images/default-news-1.png" alt="Our news">
                         </div>
                         <div class="news-description">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore explicabo facilis fuga laboriosam magni nesciunt, quam quidem sit suscipit ut?
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore explicabo facilis fuga
+                                laboriosam magni nesciunt, quam quidem sit suscipit ut?
                             </p>
                             <a href="#">Читать далее...</a>
                         </div>
@@ -84,21 +97,40 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad aperiam aut commo
                         </div>
                         <div class="news-description">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore explicabo facilis fuga laboriosam magni nesciunt, quam quidem sit suscipit ut?
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore explicabo facilis fuga
+                                laboriosam magni nesciunt, quam quidem sit suscipit ut?
                             </p>
                             <a href="#">Читать далее...</a>
                         </div>
                     </div>
 
                 </div>
+
                 <div class="news-right-column">
+
+                    <!--NEWS ITEM START(2 image)-->
                     <div class="news-item">
                         <div class="news-image">
                             <img src="./images/default-news-2.png" alt="Our news">
                         </div>
                         <div class="news-description">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore explicabo facilis fuga laboriosam magni nesciunt, quam quidem sit suscipit ut?
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore explicabo facilis fuga
+                                laboriosam magni nesciunt, quam quidem sit suscipit ut?
+                            </p>
+                            <a href="#">Читать далее...</a>
+                        </div>
+                    </div>
+                    <!--NEWS ITEM START(2 image)-->
+
+                    <div class="news-item">
+                        <div class="news-image">
+                            <img src="./images/default-news-2.png" alt="Our news">
+                        </div>
+                        <div class="news-description">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore explicabo facilis fuga
+                                laboriosam magni nesciunt, quam quidem sit suscipit ut?
                             </p>
                             <a href="#">Читать далее...</a>
                         </div>
@@ -109,7 +141,8 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad aperiam aut commo
                         </div>
                         <div class="news-description">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore explicabo facilis fuga laboriosam magni nesciunt, quam quidem sit suscipit ut?
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore explicabo facilis fuga
+                                laboriosam magni nesciunt, quam quidem sit suscipit ut?
                             </p>
                             <a href="#">Читать далее...</a>
                         </div>
@@ -120,18 +153,8 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad aperiam aut commo
                         </div>
                         <div class="news-description">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore explicabo facilis fuga laboriosam magni nesciunt, quam quidem sit suscipit ut?
-                            </p>
-                            <a href="#">Читать далее...</a>
-                        </div>
-                    </div>
-                    <div class="news-item">
-                        <div class="news-image">
-                            <img src="./images/default-news-2.png" alt="Our news">
-                        </div>
-                        <div class="news-description">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore explicabo facilis fuga laboriosam magni nesciunt, quam quidem sit suscipit ut?
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore explicabo facilis fuga
+                                laboriosam magni nesciunt, quam quidem sit suscipit ut?
                             </p>
                             <a href="#">Читать далее...</a>
                         </div>
@@ -141,6 +164,8 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad aperiam aut commo
             <hr>
             <div class="home-contact-holder">
                 <h2>Как с нами связаться?</h2>
+
+                <!--CONTACT FORM START-->
                 <div class="contact-form-wrap">
                     <form action="#">
                         <div class="contact-form-content">
@@ -158,6 +183,8 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad aperiam aut commo
                         </div>
                     </form>
                 </div>
+                <!--CONTACT FORM END-->
+
             </div>
         </div>
         <!--HOME PAGE END-->
@@ -173,7 +200,8 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad aperiam aut commo
                     <div class="partners-avatar"></div>
                     <div class="partners-info">
                         <div class="partners-name"><h3><a href="#">название компании</a></h3></div>
-                        <div class="partners-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
+                        <div class="partners-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Alias
                             cupiditate deserunt ducimus eligendi hic illo minima nihil sapiente temporibus velit?
                         </div>
                     </div>
@@ -182,7 +210,8 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad aperiam aut commo
                     <div class="partners-avatar"></div>
                     <div class="partners-info">
                         <div class="partners-name"><h3><a href="#">название компании</a></h3></div>
-                        <div class="partners-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
+                        <div class="partners-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Alias
                             cupiditate deserunt ducimus eligendi hic illo minima nihil sapiente temporibus velit?
                         </div>
                     </div>
@@ -191,7 +220,8 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad aperiam aut commo
                     <div class="partners-avatar"></div>
                     <div class="partners-info">
                         <div class="partners-name"><h3><a href="#">название компании</a></h3></div>
-                        <div class="partners-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
+                        <div class="partners-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Alias
                             cupiditate deserunt ducimus eligendi hic illo minima nihil sapiente temporibus velit?
                         </div>
                     </div>
@@ -200,7 +230,8 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad aperiam aut commo
                     <div class="partners-avatar"></div>
                     <div class="partners-info">
                         <div class="partners-name"><h3><a href="#">название компании</a></h3></div>
-                        <div class="partners-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
+                        <div class="partners-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Alias
                             cupiditate deserunt ducimus eligendi hic illo minima nihil sapiente temporibus velit?
                         </div>
                     </div>
@@ -208,6 +239,60 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad aperiam aut commo
             </div>
         </div>
         <!--PARTNERS END-->
+
+        <!--NEWS PAGE START-->
+        <div class="news">
+            <div class="main-title">
+                <span></span>
+                <h1>новости</h1>
+            </div>
+            <div class="news-content">
+                <div class="green-background">
+                    <div class="news-left clear">
+                    <!--NEWS ITEM FLOAT START(1 image)-->
+                    <div class="news-item _float _big">
+                        <div class="news-description">
+                            <div class="news-image">
+                                <img src="./images/default-news-1.png" alt="Our news">
+                            </div>
+                            <h3><a href="#">новости</a></h3>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad aperiam aut commodi culpa
+                                cupiditate distinctio dolore dolores ducimus labore maxime natus non quam quasi, quidem
+                                sapiente similique tempore temporibus, totam voluptates! Cumque cupiditate excepturi,
+                                exercitationem impedit iste qui quos, repudiandae sapiente unde veniam, vero voluptatibus?
+                                Adipisci alias animi, at culpa enim eos eum inventore ipsa, libero maiores maxime minus nam
+                                natus nesciunt nisi obcaecati officiis quaerat quibusdam quis quo reiciendis tempora velit
+                                voluptatum. Consequuntur culpa debitis error odio perferendis ratione repellat repudiandae
+                                tenetur. Atque autem enim explicabo fugiat harum magnam maxime nisi nostrum quis suscipit
+                                totam, vel vero voluptatibus! </p>
+                        </div>
+                        <a href="#">Читать далее...</a>
+                    </div>
+                    <!--NEWS ITEM FLOAT END-->
+                </div>
+                </div>
+                <div class="news-right">
+                    <!--NEWS ITEM START BIG(2 image)-->
+                    <div class="news-item _big">
+                        <div class="news-image _big">
+                            <img src="./images/default-news-2.png" alt="Our news">
+                        </div>
+                        <div class="news-description">
+                            <h3><a href="#">новости</a></h3>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore explicabo facilis fuga
+                                laboriosam magni nesciunt, quam quidem sit suscipit ut?
+                            </p>
+                            <a href="#">Читать далее...</a>
+                        </div>
+                    </div>
+                    <!--NEWS ITEM END BIG(2 image)-->
+                </div>
+            </div>
+
+        </div>
+        <!--NEWS PAGE END-->
 
     </main>
 </div>
